almost done with css, need to fix spacing

--- a/src/components/SupportServices/SupportServices.css
+++ b/src/components/SupportServices/SupportServices.css
@@ -21,6 +21,46 @@
     height: 4em;
     font-family: Verdana, sans-serif;
 }
+.Speechbutton
+{
+    color: #556667;
+    text-decoration: underline;
+    text-decoration-color: #556667;
+    background-color: white;
+    border-style: solid;
+    border-color: #CD9862;
+    border-width: 2px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 2em;
+    padding-right: 2em;
+    border-radius: 10px;
+    height: 4em;
+    font-family: Verdana, sans-serif;
+}
+.PTbutton
+{
+    color: #556667;
+    text-decoration: underline;
+    text-decoration-color: #556667;
+    background-color: white;
+    border-style: solid;
+    border-color: #CD9862;
+    border-width: 2px;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    padding-left: 2em;
+    padding-right: 2em;
+    border-radius: 10px;
+    height: 4em;
+    font-family: Verdana, sans-serif;
+}
+.Ptsections
+{
+    margin-left: 12%;
+    display: block;
+    margin-bottom: 2em;
+}
 .SpeechSections
 {
     margin-left: 12%;
